--- a/content/week8/C15y16_fft.ipynb
+++ b/content/week8/C15y16_fft.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "<img src='./img/señal_tiempo.png' width='500' height='500'/>\n",
     "\n",
-    "Aquí entra en escena la **Transformada Discreta de Fourier** (DFT, por sus siglas en inglés). Este es un algoritmo que transforma una función matemática en otra, obteniendo una representación en el dominio de la frecuencia, siendo la función original una función en el dominio del tiempo.\n",
+    "Aquí entra en escena la **Transformada Discreta de Fourier** (DFT, por sus siglas en inglés). Este es un algoritmo que transforma una función matemática en otra, obteniendo una **representación en el dominio de la frecuencia**, siendo la función original una función en el dominio del tiempo.\n",
     "\n",
     "La representación en el dominio de la frecuencia es la descripción descompuesta de la onda de la señal original, es decir, descompone una señal en sus componentes espectrales individuales y así proporciona información sobre su composición. \n",
     "\n",
@@ -76,11 +76,15 @@
     "f(t) = A_0 + A_1 \\sin(\\omega t + \\phi_1) + A_2 \\sin(2 \\omega t + \\phi_2) + ... + A_n \\sin(n \\omega t + \\phi_n)\n",
     "$$\n",
     "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "\n",
     "Para llegar a esta solución, debemos conocer:\n",
     "- El periodo $T$ de la señal.\n",
     "- La cantidad de datos $N$ requeridos para comlpetar cada periodo.\n",
     "- La frecuencia de muestreo (también llamado el *paso de frecuencias* o *resolución de frecuencias*), determinado como $\\Delta f = 1/T$.\n",
     "- La frecuencia circular $\\omega = 2 \\pi / T$.\n",
+    "\n",
+    "</div>\n",
     "\n",
     "La **Transformada Rápida de Fourier** (FFT, por sus siglas en inglés) es un algoritmo que reduce considerablemente el tiempo de cálculo de la DFT.\n",
     "\n",
@@ -212,23 +216,24 @@
    "outputs": [],
    "source": [
     "# Periodo\n",
-    "T = 18 # ms\n",
+    "T = 18 # [ms]\n",
     "\n",
     "# Cantidad de datos\n",
-    "N = len(df['f1'])\n",
+    "N = int(len(df['f1']) / 2)\n",
     "\n",
     "# Frecuencia de muestreo\n",
     "def frec_muestreo(T):\n",
     "    return 1/T\n",
     "\n",
-    "delta_f = frec_muestreo(T) # Hz\n",
+    "delta_f = frec_muestreo(T) # [Hz]\n",
+    "print(f'Frecuencia de Muestreo: {delta_f} Hz')\n",
     "\n",
     "# Frecuencia Circular\n",
     "def freq_circular(T):\n",
-    "    return 2*np.pi / (T/1000)\n",
+    "    return 2*np.pi / (T/1000) # T de [ms] a [s]\n",
     "\n",
-    "omega = freq_circular(T) # rad/s\n",
-    "omega"
+    "omega = freq_circular(T) # [rad/s]\n",
+    "print(f'Frecuencia Circular: {omega} rad/s')"
    ]
   },
   {
@@ -245,7 +250,7 @@
    "outputs": [],
    "source": [
     "# PASO 1. Estimar la FFT\n",
-    "señal_fft = fft(df['f1'].values)\n",
+    "señal_fft = fft(df['f1'][0:N].values)\n",
     "señal_fft"
    ]
   },
@@ -313,7 +318,7 @@
     "n_picos = 2\n",
     "\n",
     "max_An = np.unique(An[np.argpartition(An, -n_picos*2)[-n_picos*2:]])\n",
-    "max_An"
+    "np.sort(max_An)[::-1]"
    ]
   },
   {
@@ -331,7 +336,7 @@
     "n_picos = 2\n",
     "\n",
     "max_phi = np.unique(phi[np.argpartition(phi, -n_picos)[-n_picos:]])\n",
-    "max_phi"
+    "np.sort(max_phi)[::-1]"
    ]
   },
   {
@@ -341,7 +346,7 @@
     "Conocidos estos valores, podemos obtener la representación matemática de la DFT; esta es:\n",
     "\n",
     "$$\n",
-    "\\boxed{ f(t) = 3.66 \\sin(2 \\omega t) + 1.83 \\sin(4 \\omega t) }\n",
+    "\\boxed{ f(t) = 3.5 \\sin(\\omega t + 3.14) + 1.9 \\sin(2 \\omega t + 3.14) }\n",
     "$$"
    ]
   },
@@ -377,17 +382,18 @@
    "outputs": [],
    "source": [
     "# Periodo\n",
-    "T = 36 # ms\n",
+    "T = 36 # [ms]\n",
     "\n",
     "# Cantidad de datos\n",
     "N = len(df['f4'])\n",
     "\n",
     "# Frecuencia de muestreo\n",
-    "delta_f = frec_muestreo(T) # Hz\n",
+    "delta_f = frec_muestreo(T) # [Hz]\n",
+    "print(f'Frecuencia de Muestreo: {delta_f} Hz')\n",
     "\n",
     "# Frecuencia Circular\n",
-    "omega = freq_circular(T) # rad/s\n",
-    "omega"
+    "omega = freq_circular(T) # [rad/s]\n",
+    "print(f'Frecuencia Circular: {omega} rad/s')"
    ]
   },
   {
@@ -463,7 +469,7 @@
     "n_picos = 3\n",
     "\n",
     "max_An = np.unique(An[np.argpartition(An, -n_picos*2)[-n_picos*2:]])\n",
-    "max_An"
+    "np.sort(max_An)[::-1]"
    ]
   },
   {
@@ -479,7 +485,7 @@
     "n_picos = 3\n",
     "\n",
     "max_phi = np.unique(phi[np.argpartition(phi, -n_picos)[-n_picos:]])\n",
-    "max_phi"
+    "np.sort(max_phi)[::-1]"
    ]
   },
   {
@@ -525,17 +531,18 @@
    "outputs": [],
    "source": [
     "# Periodo\n",
-    "T = 36 # ms\n",
+    "T = 36 # [ms]\n",
     "\n",
     "# Cantidad de datos\n",
     "N = len(df['f5'])\n",
     "\n",
     "# Frecuencia de muestreo\n",
-    "delta_f = frec_muestreo(T) # Hz\n",
+    "delta_f = frec_muestreo(T) # [Hz]\n",
+    "print(f'Frecuencia de Muestreo: {delta_f} Hz')\n",
     "\n",
     "# Frecuencia Circular\n",
-    "omega = freq_circular(T) # rad/s\n",
-    "omega"
+    "omega = freq_circular(T) # [rad/s]\n",
+    "print(f'Frecuencia Circular: {omega} rad/s')"
    ]
   },
   {
@@ -611,7 +618,7 @@
     "n_picos = 2\n",
     "\n",
     "max_An = np.unique(An[np.argpartition(An, -n_picos*2)[-n_picos*2:]])\n",
-    "max_An"
+    "np.sort(max_An)[::-1]"
    ]
   },
   {
@@ -627,7 +634,7 @@
     "n_picos = 2\n",
     "\n",
     "max_phi = np.unique(phi[np.argpartition(phi, -n_picos)[-n_picos:]])\n",
-    "max_phi"
+    "np.sort(max_phi)[::-1]"
    ]
   },
   {
@@ -637,7 +644,7 @@
     "Conocidos estos valores, podemos obtener la representación matemática de la DFT; esta es:\n",
     "\n",
     "$$\n",
-    "\\boxed{ f(t) = 7.52 \\sin(2 \\omega t + 3.14) + 5.06 \\sin(3 \\omega t + 3.12) }\n",
+    "\\boxed{ f(t) = 7.52 \\sin(2 \\omega t + 3.12) + 5.06 \\sin(3 \\omega t + 3.03) }\n",
     "$$"
    ]
   },
@@ -744,6 +751,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FFT señal combinada\n",
+    "señal_fft1234 = fft(data1234[:,0])\n",
+    "\n",
+    "# Gráfica\n",
+    "hor = 8\n",
+    "ver = 5\n",
+    "fig = plt.figure(figsize=(hor, ver), dpi=80)\n",
+    "\n",
+    "plt.plot(np.abs(señal_fft1234[0:1000]), linestyle='-', color='orchid', linewidth=1)\n",
+    "\n",
+    "formato_grafica(titulo='FFT', \n",
+    "                ejex='Frecuencia (Hz)', \n",
+    "                ejey='Amplitud',\n",
+    "                xlim=(0, None),\n",
+    "                leyenda=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# PASO 1. Estimar la FFT\n",
     "señal_fft1 = fft(data1[:,0])\n",
     "señal_fft2 = fft(data2[:,0])\n",
@@ -765,29 +795,6 @@
     "plt.plot(np.abs(señal_fft2[0:1000]), linestyle='-', color='orange', linewidth=1)\n",
     "plt.plot(np.abs(señal_fft3[0:1000]), linestyle='-', color='mediumseagreen', linewidth=1)\n",
     "plt.plot(np.abs(señal_fft4[0:1000]), linestyle='-', color='tomato', linewidth=1)\n",
-    "\n",
-    "formato_grafica(titulo='FFT', \n",
-    "                ejex='Frecuencia (Hz)', \n",
-    "                ejey='Amplitud',\n",
-    "                xlim=(0, None),\n",
-    "                leyenda=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FFT señal combinada\n",
-    "señal_fft1234 = fft(data1234[:,0])\n",
-    "\n",
-    "# Gráfica\n",
-    "hor = 8\n",
-    "ver = 5\n",
-    "fig = plt.figure(figsize=(hor, ver), dpi=80)\n",
-    "\n",
-    "plt.plot(np.abs(señal_fft1234[0:1000]), linestyle='-', color='orchid', linewidth=1)\n",
     "\n",
     "formato_grafica(titulo='FFT', \n",
     "                ejex='Frecuencia (Hz)', \n",
@@ -1068,10 +1075,10 @@
    "outputs": [],
    "source": [
     "# Amplitudes\n",
-    "n_picos = 3\n",
+    "n_picos = 1\n",
     "\n",
     "max_An = np.unique(An[np.argpartition(An, -n_picos*2)[-n_picos*2:]])\n",
-    "max_An"
+    "np.sort(max_An)[::-1]"
    ]
   },
   {
@@ -1084,10 +1091,10 @@
     "phi = np.angle(señal_fft)\n",
     "\n",
     "# Ángulos de amplitudes\n",
-    "n_picos = 3\n",
+    "n_picos = 1\n",
     "\n",
     "max_phi = np.unique(phi[np.argpartition(phi, -n_picos)[-n_picos:]])\n",
-    "max_phi"
+    "np.sort(max_phi)[::-1]"
    ]
   },
   {
@@ -1097,7 +1104,7 @@
     "Conocidos estos valores, podemos obtener la representación matemática de la DFT; para el armónico principal, esta es:\n",
     "\n",
     "$$\n",
-    "\\boxed{ f(t) = 27.89 \\sin(3 \\omega t + 3.14) }\n",
+    "\\boxed{ f(t) = 27.89 \\sin(\\omega t + 3.01) }\n",
     "$$"
    ]
   },
@@ -1265,17 +1272,17 @@
    "source": [
     "# FFT\n",
     "# Periodo\n",
-    "T = tiempo[35] # ms\n",
+    "T = np.max(tiempo) # [ms]\n",
     "\n",
     "# Cantidad de datos\n",
     "N = len(sol[:,1])\n",
     "\n",
     "# Frecuencia de muestreo\n",
-    "deltaf = frec_muestreo(T) # Hz\n",
+    "deltaf = frec_muestreo(T) # [Hz]\n",
     "print(f'Frecuencia Muestreo: {np.round(delta_f, 2)} Hz')\n",
     "\n",
     "# Frecuencia Circular\n",
-    "omega = freq_circular(T) # rad/s\n",
+    "omega = freq_circular(T) # [rad/s]\n",
     "print(f'Frecuencia Circular: {np.round(omega, 2)} rad/s')"
    ]
   },
@@ -1349,10 +1356,10 @@
    "outputs": [],
    "source": [
     "# Amplitudes\n",
-    "n_picos = 4\n",
+    "n_picos = 3\n",
     "\n",
     "max_An = np.unique(An[np.argpartition(An, -n_picos*2)[-n_picos*2:]])\n",
-    "max_An"
+    "np.sort(max_An)[::-1]"
    ]
   },
   {
@@ -1365,10 +1372,21 @@
     "phi = np.angle(señal_fft)\n",
     "\n",
     "# Ángulos de amplitudes\n",
-    "n_picos = 4\n",
+    "n_picos = 3\n",
     "\n",
     "max_phi = np.unique(phi[np.argpartition(phi, -n_picos)[-n_picos:]])\n",
-    "max_phi"
+    "np.sort(max_phi)[::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conocidos estos valores, podemos obtener la representación matemática de la DFT; para el armónico principal, esta es:\n",
+    "\n",
+    "$$\n",
+    "\\boxed{ f(t) = 1.42 \\sin(\\omega t + 3.13) + 0.60 \\sin(\\omega t + 3.13) + 0.44 \\sin(\\omega t + 3.12)}\n",
+    "$$"
    ]
   }
  ],
